Final commit before publishing

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charity Water Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Charity: Water</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-    <!-- Add your HTML here -->
+
+  <header class="header">
+    <img src="img/logo.png" alt="Charity Water Logo" class="logo" />
+    <h1>charity: water</h1>
+    <h2>Charity: Water, improving drinking water worldwide</h2>
+    <p class="subheading">Using your efforts to bring clean drinking water to millions</p>
+  </header>
+
+  <section class="quote-section">
+    <blockquote>
+      “If you want to assist with the distribution of clean drinking water then Charity:Water is the company just for you. Thanks to funds raised and partnership with local organizations due to people like you who have always wanted to see positive change, we enhanced the distribution of drinking water in Developing Countries like never before- transforming the lives of millions”
+    </blockquote>
+    <p class="quote-author">–Charity:Water</p>
+  </section>
+
+  <section class="image-section">
+    <div class="icon"><img src="img/icon-left.png" alt="Left Icon" /></div>
+    <img src="img/girl-photo.jpg" alt="Girl with water can" class="center-photo" />
+    <div class="icon"><img src="img/icon-right.png" alt="Right Icon" /></div>
+  </section>
+
+  <section class="quote-section">
+    <blockquote>
+      “We were able to make this young girl smile thanks to our distribution of drinkable water in her village, giving her hope again. These efforts can be done by anyone with a kind heart. That is where you come in. You can be the change which makes people smile, even through something as simple as a donation. Your efforts will not go unnoticed by those who need them most”
+    </blockquote>
+    <p class="quote-author">–Charity:Water</p>
+  </section>
+
+  <footer class="footer">
+    <a href="#" class="donate-button">DONATE <span>❤</span></a>
+  </footer>
+
 </body>
 </html>
+
